force-app/main/default/objects/LiveChatTranscript/fields/LXD_Email__c.field-meta.xml
<CustomField>
    <fullName>LXD_Email__c</fullName>
    <label>LXD_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>