force-app/main/default/objects/LiveChatTranscript/fields/LXD_FirstName__c.field-meta.xml
<CustomField>
    <fullName>LXD_FirstName__c</fullName>
    <label>LXD_FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>