force-app/main/default/objects/LiveChatTranscript/fields/LXD_LastName__c.field-meta.xml
<CustomField>
    <fullName>LXD_LastName__c</fullName>
    <label>LXD_LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>