force-app/main/default/objects/LiveChatTranscript/fields/LXD_Username__c.field-meta.xml
<CustomField>
    <fullName>LXD_Username__c</fullName>
    <label>LXD_Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>