force-app/main/default/objects/LiveChatTranscript/listViews/ChatbotQueue_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>ChatbotQueue_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>ChatbotQueue</label>
    <queue>ChatbotQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>